--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<title>HEP Aksesibilitas Ultimate Bilingual</title>
+<title>HELP Aksesibilitas Ultimate Bilingual</title>
 
 <!-- Fonts & Icons -->
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
@@ -274,7 +274,7 @@
 <body>
 
 <nav class="navbar">
-  <div class="brand" onclick="navigateTo('home')">HEP <span style="color:#fff">PRO</span></div>
+  <div class="brand" onclick="navigateTo('home')">HELP <span style="color:#fff">PRO</span></div>
   <button class="nav-btn" onclick="navigateTo('home')"><i class="fas fa-home"></i> Home</button>
 </nav>
 
@@ -656,3 +656,4 @@ function playAudioByID(filename) {
 </script>
 </body>
 </html>
+
