--- a/index.html
+++ b/index.html
@@ -599,8 +599,8 @@ sfxScanStart.volume = 0.5;
 
 // Data Konfigurasi: 10 Suara Indo + 10 Suara Inggris
 const GESTURES = [
-  { id: 'HALO', icon: '✋', title: 'Halo', titleEN: 'Hello', desc: '5 Jari Lurus', audio: 'halo.mp3', audioEN: 'hello.mp3.mp3' },
-  { id: 'BANTUAN', icon: '✊', title: 'Bantuan', titleEN: 'Help', desc: 'Kepalan Tangan', audio: 'bantuan.mp3', audioEN: 'help_en.mp3.mp3' },
+  { id: 'HALO', icon: '✋', title: 'Halo', titleEN: 'Hello', desc: '5 Jari Lurus', audio: 'halo.mp3.mp3', audioEN: 'hello.mp3.mp3' },
+  { id: 'BANTUAN', icon: '✊', title: 'Bantuan', titleEN: 'Help', desc: 'Kepalan Tangan', audio: 'bantuan.mp3.mp3', audioEN: 'help_en.mp3.mp3' },
   { id: 'TERIMA', icon: '👍', title: 'Terima Kasih', titleEN: 'Thank You', desc: 'Jempol Atas', audio: 'terima.mp3', audioEN: 'thanks_en.mp3.mp3' },
   { id: 'MAAF', icon: '☝️', title: 'Maaf', titleEN: 'Sorry', desc: 'Telunjuk Saja', audio: 'maaf.mp3.mp3', audioEN: 'sorry_en.mp3.mp3' },
   { id: 'SETUJU', icon: '✌️', title: 'Setuju', titleEN: 'Agree', desc: 'Victory Sign', audio: 'setuju.mp3.mp3', audioEN: 'yes_en.mp3.mp3' },
@@ -1096,3 +1096,4 @@ function applySettings() {
 </script>
 </body>
 </html>
+
